--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,13 +15,13 @@
 }
 
 @font-face {
-    font-family: 'GehenSans';
-    src: url('gehensans-webfont.eot');
-    src: url('gehensans-webfont.eot?#iefix') format('embedded-opentype'),
-         url('gehensans-webfont.woff') format('woff'),
-         url('gehensans-webfont.ttf') format('truetype'),
-         url('gehensans-webfont.svg#GehenSansBook') format('svg');
-    font-weight: normal;
+    font-family: 'GehenSansCondensedBold';
+    src: url('gehensanscondensed-bold-webfont.eot');
+    src: url('gehensanscondensed-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('gehensanscondensed-bold-webfont.woff') format('woff'),
+         url('gehensanscondensed-bold-webfont.ttf') format('truetype'),
+         url('gehensanscondensed-bold-webfont.svg#GehenSansCondensedBold') format('svg');
+    font-weight: bold;
     font-style: normal;
 
 }
