--- a/webfonts.css
+++ b/webfonts.css
@@ -1,55 +1,23 @@
 @font-face {
-    font-family: 'GehenSansMono';
-    src: url('GehenSansMono-Programmer.eot');
-    src: url('GehenSansMono-Programmer.eot?#iefix') format('embedded-opentype'),
-         url('GehenSansMono-Programmer.woff') format('woff'),
-         url('GehenSansMono-Programmer.ttf') format('truetype'),
-         url('GehenSansMono-Programmer.svg#GehenSansMono') format('svg');
+    font-family: 'GehenSans';
+    src: url('gehensans-regular-webfont.eot');
+    src: url('gehensans-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('gehensans-regular-webfont.woff') format('woff'),
+         url('gehensans-regular-webfont.ttf') format('truetype'),
+         url('gehensans-regular-webfont.svg#GehenSans-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
-}
 
-@font-face {
-    font-family: 'GehenSansCondensed';
-    src: url('GehenSansCondensed-Bold.eot');
-    src: url('GehenSansCondensed-Bold.eot?#iefix') format('embedded-opentype'),
-         url('GehenSansCondensed-Bold.woff') format('woff'),
-         url('GehenSansCondensed-Bold.ttf') format('truetype'),
-         url('GehenSansCondensed-Bold.svg#GehenSansCondensed') format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'GehenSansCondensed';
-    src: url('GehenSansCondensed.eot');
-    src: url('GehenSansCondensed.eot?#iefix') format('embedded-opentype'),
-         url('GehenSansCondensed.woff') format('woff'),
-         url('GehenSansCondensed.ttf') format('truetype'),
-         url('GehenSansCondensed.svg#GehenSansCondensed') format('svg');
-    font-weight: normal;
-    font-style: normal;
 }
 
 @font-face {
     font-family: 'GehenSans';
-    src: url('GehenSansCondensed-Bold.eot');
-    src: url('GehenSansCondensed-Bold.eot?#iefix') format('embedded-opentype'),
-         url('GehenSansCondensed-Bold.woff') format('woff'),
-         url('GehenSansCondensed-Bold.ttf') format('truetype'),
-         url('GehenSansCondensed-Bold.svg#GehenSansCondensed') format('svg');
+    src: url('gehensans-bold-webfont.eot');
+    src: url('gehensans-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('gehensans-bold-webfont.woff') format('woff'),
+         url('gehensans-bold-webfont.ttf') format('truetype'),
+         url('gehensans-bold-webfont.svg#GehenSans-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
-}
 
-@font-face {
-    font-family: 'GehenSans';
-    src: url('GehenSans.eot');
-    src: url('GehenSans.eot?#iefix') format('embedded-opentype'),
-         url('GehenSans.woff') format('woff'),
-         url('GehenSans.ttf') format('truetype'),
-         url('GehenSans.svg#GehenSans') format('svg');
-    font-weight: normal;
-    font-style: normal;
 }
-
